# Udemy-C--BtoE

./: .gitignore  CMakeLists.txt  Makefile  Primal  PrimalConfig.h.in  main.cc
Inc/: doOtherStuff.hh  doStuff.hh  test.hh
Src/: CMakeLists.txt  catchtest.cc  doOtherStuff.cc  doStuff.cc  doctest.cc  main.cc  test.cc
